--- a/style.css
+++ b/style.css
@@ -10,24 +10,24 @@
 
 @font-face {
     font-family: "Kotayk";
-    src: url("/Kotayk-italic.ttf") format("truetype");
+    src: url("Kotayk-italic.ttf") format("truetype");
 }
 
 @font-face {
     font-family: "Larrisha Script";
-    src: url("/Larrisha Script.ttf") format("truetype");
+    src: url("Larrisha Script.ttf") format("truetype");
 }
 
 @font-face {
     font-family: "Vrdznagir";
-    src: url("/Vrdznagir.otf") format("truetype");
+    src: url("Vrdznagir.otf") format("truetype");
 }
 
 body {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    background-image: url(/bg.jpg);
+    background-image: url(bg.jpg);
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
@@ -145,7 +145,7 @@ body {
     max-width: 560px;
     width: 100%;
     height: 100vh;
-    background-image: url(/1.jpg);
+    background-image: url(1.jpg);
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
@@ -575,7 +575,7 @@ h3 {
     max-width: 560px;
     width: 100%;
     height: 100vh;
-    background-image: url(/2.jpg);
+    background-image: url(2.jpg);
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
