--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@
 
 @font-face {
     font-family: "Kotayk";
-    src: url("Kotayk-italic.ttf") format("truetype");
+    src: url("Kotayk italic.ttf") format("truetype");
 }
 
 @font-face {
