--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@
 
 @font-face {
     font-family: "Kotayk";
-    src: url("Kotayk italic.ttf") format("truetype");
+    src: url("Kotayk.ttf") format("truetype");
 }
 
 @font-face {
@@ -243,7 +243,7 @@ body {
     }
 
     to {
-        left: 35%;
+        left: 45%;
     }
 }
 
@@ -271,7 +271,7 @@ body {
     justify-content: center;
     flex-direction: column;
     text-align: center;
-    font-family: "Kotayk", serif;
+    font-family: "Kotayk", sans-serif;
     transform: translateY(-10%);
     opacity: 0;
     transition: 1s;
@@ -329,8 +329,8 @@ body {
 
 .hearth {
     position: absolute;
-    top: -20%;
-    left: -42%;
+    top: 4%;
+    left: 10%;
     z-index: 2;
 }
 
@@ -426,7 +426,8 @@ button {
     bottom: 0%;
     left: 20%;
     z-index: 1;
-    width: 300px;
+    max-width: 300px;
+    width: 100%;
     height: 300px;
     border: 1px solid black;
     border-radius: 50% 50% 0 0;
@@ -435,8 +436,9 @@ button {
 .placeimg {
     position: absolute;
     top: 0%;
-    right: 20%;
-    width: 300px;
+    right: 5%;
+    max-width: 300px;
+    width: 100%;
     height: 300px;
     z-index: 9;
     border-radius: 50% 50% 0 0;
@@ -527,8 +529,8 @@ a {
 }
 
 .planimg {
-    width: 45px;
-    height: 65px;
+    width: 52px;
+    height: 75px;
     border-radius: 22px;
 }
 
@@ -537,6 +539,7 @@ a {
     position: absolute;
     top: 130%;
     left: 50%;
+    transform: translateX(-50%);
 }
 
 .plantext {
@@ -590,7 +593,7 @@ h3 {
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
-    z-index: 0;
+    z-index: 34;
     transform: translateY(-70%);
     opacity: 0;
     transition: 1.5s 0.3s;
@@ -606,7 +609,7 @@ h3 {
 
 .footertext2 {
     position: absolute;
-    bottom: 16%;
+    bottom: 20%;
     left: 50%;
     font-size: 96px;
     transform: translate(-50%, -50%);
@@ -649,7 +652,9 @@ h3 {
     line-height: 100px;
     text-align: center;
     z-index: 88;
-    text-shadow: 0px 0px rgb(255, 255, 255);
+    background-color: rgba(255, 255, 255, 0.6);
+    backdrop-filter: blur(10px);
+    z-index: 1;
 }
 
 .logo {
@@ -657,8 +662,73 @@ h3 {
     width: 50%;
 }
 
-@media screen and (min-width : 480px) {
-    .hearth {
-        width: 40px;
+@media screen and (max-width : 600px) {
+    .headertext1 {
+        right: -80%;
+        animation: text1_2 2s linear forwards 3s;
     }
+    
+    .headertext2 {
+        animation: text2_2 2s linear forwards 3s;
+    }
+
+    .headertext3 {
+        left: 70%;
+        animation: text3_2 2s linear forwards 3s;
+    }
+
+    .hearth {
+        left: -10%;
+    }
+
+    .border {
+        left: 5%;
+    }
+
+    .placeimg {
+        right: 5%;
+    }
+
+    .footertext1 {
+        right: -35%;
+    }
+
+    .footertext2 {
+        bottom: 16%;
+    }
+
+    .footertext3 {
+        left: 50%;
+    }
+
+    @keyframes text1_2 {
+        from {
+            right: -200%;
+        }
+
+        to {
+            right: -35%;
+        }
+    }
+
+    @keyframes text2_2 {
+        from {
+            bottom: -35%;
+        }
+
+        to {
+            bottom: 12%;
+        }
+    }
+
+    @keyframes text3_2 {
+        from {
+            left: -50%;
+        }
+
+        to {
+            left: 50%;
+        }
+    }
+
 }
