--- a/style.css
+++ b/style.css
@@ -60,7 +60,7 @@ body {
     width: 50%;
     height: 100vh;
     z-index: 99;
-    transform: translateX(-40%);
+    transform: translateX(-40%) scale(1.2);
     animation: opentop 2s linear forwards 0.5s;
 }
 
@@ -70,7 +70,7 @@ body {
     left: 50%;
     width: 40%;
     height: 100vh;
-    transform: translateX(-50%);
+    transform: translateX(-50%) scale(1.2);
     z-index: 98;
     animation: openbody 2s linear forwards 0.5s;
 }
@@ -117,7 +117,7 @@ body {
 
 @keyframes opentop {
     from {
-        transform: translateX(-50%);
+        transform: translateX(-40%) scale(1.2);
     }
 
     to {
@@ -129,7 +129,7 @@ body {
 
 @keyframes openbody {
     from {
-        transform: translateX(-50%);
+        transform: translateX(-50%) scale(1.2);
     }
 
     to {
@@ -330,7 +330,7 @@ body {
 .hearth {
     position: absolute;
     top: 4%;
-    left: 10%;
+    left: -10%;
     z-index: 2;
 }
 
@@ -690,11 +690,11 @@ h3 {
     }
 
     .border {
-        left: 15%;
+        left: 10%;
     }
 
     .placeimg {
-        right: 15%;
+        right: 10%;
     }
 
     .footertext1 {
