--- a/style.css
+++ b/style.css
@@ -263,7 +263,7 @@ body {
 
 .later {
     padding-top: 30px;
-    max-width: 480px;
+    max-width: 410px;
     width: 100%;
     height: 250px;
     display: flex;
@@ -283,10 +283,14 @@ body {
     opacity: 1;
 }
 
+.latetext2 {
+    font-size: 22px;
+}
+
 /********************************************************/
 
 .calendar {
-    max-width: 480px;
+    max-width: 380px;
     width: 100%;
     position: relative;
     opacity: 0;
@@ -651,15 +655,26 @@ h3 {
     font-size: 30px;
     line-height: 100px;
     text-align: center;
-    z-index: 88;
-    background-color: rgba(255, 255, 255, 0.6);
-    backdrop-filter: blur(10px);
     z-index: 1;
+    background: linear-gradient(rgba(0, 0, 0, 0.2) 100%, rgba(255, 255, 255, 0.05) 30%);
+    backdrop-filter: blur(10px);
+    transform: translateY(-30%);
+    opacity: 0;
+    transition: 1s;
 }
 
 .logo {
-    margin: 0 auto;
-    width: 50%;
+    width: 30%;
+    transform: translateY(-30%);
+}
+
+h6 {
+    line-height: 0px;
+}
+
+.ayan.active {
+    opacity: 1;
+    transform: translateY(0);
 }
 
 @media screen and (max-width : 600px) {
@@ -707,11 +722,6 @@ h3 {
 
     .footertext3 {
         left: 50%;
-    }
-
-    .latetext2 {
-        font-size: 20px;
-        max-width: 390px;
     }
 
     .ayan {
