--- a/style.css
+++ b/style.css
@@ -305,7 +305,7 @@ body {
 }
 
 .ctext2 {
-    font-size: 68px;
+    font-size: 48px;
     font-family: "Kotayk", serif;
 }
 
@@ -698,6 +698,18 @@ h6 {
     .headertext3 {
         left: -225%;
         animation: text3_2 2s linear forwards 3s;
+    }
+
+    .latetext2 {
+        font-size: 18px;
+    }
+
+    .calendar {
+        max-width: 350px;
+    }
+
+    .block {
+        font-size: 20px;
     }
 
     .hearth {
